# routes/api.php
@@ -12,7 +12,7 @@ use App\Http\Controllers\Api\ProspectController;
 use Illuminate\Support\Facades\Route;
 
 Route::post('/login', [AuthController::class, 'login']);
-Route::get('/lp/{identifier}', [LandingpageController::class, 'show'])->name('lp.show');
+Route::get('/cp/{identifier}', [CampaignController::class, 'showLandingpage'])->name('lp.show');
 
 Route::middleware(['auth:sanctum'])->group(function () {
 
